k8s/deployment-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: nginxdemos/hello
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "128Mi"
              cpu: "256m"
            requests:
              memory: "64Mi"
              cpu: "128m"
