k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cdn-worker
  namespace: cdn
spec:
  replicas: 2
  serviceAccountName: cdn-service-account
  selector:
    matchLabels:
      app: cdn-worker
  template:
    metadata:
      labels:
        app: cdn-worker
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9091"
        prometheus.io/path: "/metrics"
    spec:
      serviceAccountName: cdn-service-account
      containers:
        - name: cdn-worker
          image: 791954933241.dkr.ecr.ap-southeast-2.amazonaws.com/cdn-worker:latest
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
