k8s/api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: cdn-api-service
  namespace: cdn
spec:
  type: ClusterIP
  selector:
    app: cdn-api
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
