k8s/svc-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-svc
  namespace: app
spec:
  type: NodePort
  selector:
    app: app
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    nodePort: 30080
